[FE]. Fixed gallery z-index issue

--- a/frontend/src/shared/components/gallery/gallery.component.css
+++ b/frontend/src/shared/components/gallery/gallery.component.css
@@ -5,7 +5,7 @@ gallery .gl-backdrop {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.95);
-    z-index: 10000;
+    z-index: 20000;
 }
 
 gallery .gl-container {
@@ -14,7 +14,7 @@ gallery .gl-container {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10010;
+    z-index: 20010;
     text-align: center;
 }
 
@@ -63,7 +63,7 @@ gallery .gl-actions .gl-action {
     position: absolute;
     top: 50%;
     margin-top: -10px;
-    z-index: 10020;
+    z-index: 20020;
 }
 
 gallery .gl-actions .gl-prev {
@@ -80,7 +80,7 @@ gallery .gl-navbar {
     left: 0;
     top: 0;
     overflow: auto;
-    z-index: 10030;
+    z-index: 20030;
 }
 
 gallery .gl-navbar .gl-right {
